Update judgment spelling

--- a/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
@@ -17,7 +17,7 @@
 {% endmacro %}
 
 {% macro ccjRequestedForDefendantDashboard(claim) %}
-  {{ t('The claimant has requested a County Court Judgement (CCJ) against you on {{ ccjRequestedAt }}.',
+  {{ t('The claimant has requested a County Court Judgment (CCJ) against you on {{ ccjRequestedAt }}.',
     { ccjRequestedAt: claim.countyCourtJudgmentRequestedAt | date }) }}
 {% endmacro %}
 
