--- a/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
+++ b/src/main/features/claimant-response/views/macro/repaymentPlanBlock.njk
@@ -1,15 +1,15 @@
 {% from "./paymentPlanTable.njk" import paymentPlanTable %}
 
-{% macro repaymentPlanBlock(heading, repaymentPlan, paymentPlan) %}
+{% macro repaymentPlanBlock(heading, paymentPlan) %}
   {% if heading %}
     <h2 class="heading-medium">{{ t(heading) }}</h2>
   {% endif %}
 
   {{ paymentPlanTable(
     id = 'payment-table',
-    instalmentAmount = repaymentPlan.instalmentAmount,
-    paymentSchedule = repaymentPlan.paymentSchedule,
-    firstPaymentDate = repaymentPlan.firstPaymentDate,
+    instalmentAmount = paymentPlan.instalmentAmount,
+    paymentSchedule = paymentPlan.frequency,
+    firstPaymentDate = paymentPlan.startDate,
     lastPaymentOn = paymentPlan.calculateLastPaymentDate(),
     lengthOfPayment = paymentPlan.calculatePaymentLength()
   )
