Add states paid statuses

--- a/src/main/features/dashboard/views/contact-them.njk
+++ b/src/main/features/dashboard/views/contact-them.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "./macro/caseHistory.njk" import caseHistoryForClaimantClaimDetails %}
+{% from "./macro/caseClaimDetails.njk" import caseClaimDetailsForClaimant %}
 {% from "../../claim/views/macro/about-claim-widget.njk" import aboutClaimWidget %}
 
 {% from "table.njk" import tableStart,tableEnd, row, rowWithMultipleValue %}
