--- a/src/main/features/dashboard/views/defendant.njk
+++ b/src/main/features/dashboard/views/defendant.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "./macro/caseClaimDetails.njk" import caseClaimDetailsForDefendant %}
+{% from "./macro/claimDetails.njk" import claimDetailsForDefendant %}
 {% from "../../claim/views/macro/about-claim-widget.njk" import aboutClaimWidget %}
 
 {% set headingVisible = false %}
@@ -13,7 +13,7 @@
         {{ claim.claimNumber }}
       </h1>
       <h2 class="heading-medium">{{ t('Claim status') }}</h2>
-      {{ caseClaimDetailsForDefendant(claim) }}
+      {{ claimDetailsForDefendant(claim) }}
     </div>
 
     <div class="column-one-third">
