--- a/src/main/features/dashboard/views/index.njk
+++ b/src/main/features/dashboard/views/index.njk
@@ -6,5 +6,105 @@
 {% set heading = 'Your money claims account' %}
 
 {% block content %}
+  <div class="grid-row">
+    <div class="column-full">
+      {% if not claimDraftSaved %}
+        <a id="start-now" class="newclaim" href="{{ EligibilityPaths.startPage.uri }}">{{ t('Make a new money claim') }}</a>
+      {% endif %}
 
+      {% if claimsAsClaimant | length or claimDraftSaved %}
+
+      <h2 class="heading-medium"> {{ t('Claims you’ve made') }}</h2>
+      <table class="claim-dashboard">
+        <thead>
+        <tr>
+          <th scope="col">{{ t('Claim number') }}</th>
+          <th scope="col">{{ t('Defendant name') }}</th>
+          <th scope="col">{{ t('Claim amount') }}</th>
+
+          <th scope="col" class="mobile-hide">{{ t('Status') }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if claimDraftSaved %}
+          <tr class="draft mobile-table">
+            <td><a href="{{ DashboardPaths.claimantPage.evaluateUri({ externalId: 'draft' }) }}">{{ t('Draft claim') }}</a></td>
+            <td>-</td>
+
+            <td>-</td>
+            <td class="mobile-hide">
+              <a href="{{ ClaimPaths.taskListPage.uri }}">{{ t('Continue with claim') }}</a>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="3" class="mobile-table-status">
+              {{ t('Status: ') }}<a href="{{ ClaimPaths.taskListPage.uri }}">{{ t('Continue with claim') }}</a>
+            </td>
+          </tr>
+        {% endif %}
+        {% for claim in claimsAsClaimant %}
+          <tr class="claims default mobile-table">
+            <td><a href="/dashboard/{{ claim.externalId }}/claimant">{{ claim.claimNumber }}</a></td>
+            <td>{{ claim.claimData.defendant.name }}</td>
+            <td>{{ claim.totalAmountTillToday | numeral }}</td>
+            <td class="mobile-hide">
+              {{ dashboardStatusForClaimant(claim.status, claim) }}
+            </td>
+          </tr>
+          <tr>
+            <td colspan="3" class="mobile-table-status">
+              {{ t('Status: ') }}
+              {{ dashboardStatusForClaimant(claim.status, claim) }}
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+    </div>
+    {% endif %}
+
+    {% if claimsAsDefendant | length or responseDraftSaved %}
+    <div class="column-full">
+      <h2 class="heading-medium"> {{ t('Claims made against you') }}</h2>
+
+      <table class="claim-dashboard">
+        <thead>
+        <tr class="mobile-table">
+          <th scope="col">{{ t('Claim number') }}</th>
+          <th scope="col">{{ t('Claimant name') }}</th>
+          <th scope="col">{{ t('Claim amount') }}</th>
+
+          <th scope="col" class="mobile-hide">{{ t('Status') }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% if responseDraftSaved %}
+          <tr class="draft mobile-table">
+            <td><a href="{{ ResponsePaths.taskListPage.uri }}">Draft response</a></td>
+            <td>-</td>
+
+            <td>-</td>
+            <td>In progress</td>
+          </tr>
+        {% endif %}
+        {% for claim in claimsAsDefendant %}
+          <tr class="mobile-table">
+            <td><a href="{{ DashboardPaths.defendantPage.evaluateUri({ externalId: claim.externalId }) }}">{{ claim.claimNumber }}</a></td>
+            <td>{{ claim.claimData.claimant.name }}</td>
+            <td>{{ claim.totalAmountTillToday | numeral }}</td>
+            <td class="mobile-hide">
+              {{ dashboardStatusForDefendant(claim.status, claim) }}
+            </td>
+          </tr>
+          <tr>
+            <td colspan="3" class="mobile-table-status">
+              {{ t('Status: ') }} {{ dashboardStatusForDefendant(claim.status, claim) }}
+            </td>
+          </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      {% endif %}
+    </div>
+  </div>
 {% endblock %}
