--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -12,6 +12,43 @@
   </p>
 {% endmacro %}
 
+{% macro repaymentPlanOfferSettlementDashboard() %}
+  {{ t('You’ve signed a settlement agreement.') }}
+{% endmacro %}
+
+{% macro repaymentPlanOfferSettlementReachedClaimDetails(claim) %}
+  <h2 class="heading-small">{{ t('You’ve signed a settlement agreement') }}</h2>
+  <p>
+    {{ t('We’ve emailed {{ defendantName }} the repayment plan and the settlement agreement for them to sign.',
+    { defendantName: claim.claimData.defendant.name }) }}
+  </p>
+  <p>
+    {{ t('They must accept or reject this before 4pm on {{ respondDate }}. We’ll email you when they respond.', { respondDate: claim.respondToResponseDeadline | date}) }}
+  </p>
+  <p>
+    {{ t('If they do not think they can afford the plan, they can ask for a judge to make a different plan') }}
+  </p>
+{% endmacro %}
+
 {% macro _downloadAgreementLink(claim) %}
   <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download the agreement') }}</a>
+{% endmacro %}
+
+{% macro repaymentPlanOfferBySetDateDashboard() %}
+  {{ t('You’ve both signed a settlement agreement.') }}
+{% endmacro %}
+
+{% macro repaymentPlanOfferBySetDateReachedClaimDetails(claim) %}
+  <h2 class="bold-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
+  <p> {{ t('The agreement says the defendant will pay you in full by on {{ paymentDate }}.',
+    { paymentDate: paymentDate }) }} </p>
+  <p>
+  <p>
+    {{ _downloadSettlementAgreementLink(claim) }}
+  </p>
+  </div>
+{% endmacro %}
+
+{% macro _downloadSettlementAgreementLink(claim) %}
+  <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download the settlement agreement') }}</a>
 {% endmacro %}
